--- a/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
+++ b/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
@@ -364,7 +364,7 @@
     <string name="item_view_role_description">Tab</string>
     <string name="lab">Experimentálne</string>
     <string name="like_list">Obľúbené</string>
-    <string name="live_wallpaper">Dynamická tapeta</string>
+    <string name="live_wallpaper">Dynamické tapety</string>
     <string name="load_from_local_photos">Galéria</string>
     <string name="loading">Načítavanie...</string>
     <string name="loading_picture">Načítava sa obrázok…</string>
