--- a/Slovak/main/PersonalAssistant.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PersonalAssistant.apk/res/values-sk/strings.xml
@@ -1021,4 +1021,5 @@ na zobrazenie widgetov."</string>
     <string name="pa_widget_need_download_dialog_message_load">Ak chcete používať widgety, najprv načítajte \"%s\".</string>
     <string name="pa_widget_need_download_dialog_message_upgrade">Ak chcete používať widgety, najskôr aktualizujte \"%s\".</string>	
 	<string name="pa_rtk_unlike_text">Odopnúť</string>
+	<string name="pa_picker_detail_maml_downloading">Sťahovanie...</string>
 </resources>
