--- a/Slovak/main/XiaomiEUExt.apk/res/values-sk/strings.xml
+++ b/Slovak/main/XiaomiEUExt.apk/res/values-sk/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="add">Pridať</string>
-    <string name="app_name">Miuios.cz rozširenie</string>
+    <string name="app_name">Miuios.cz / Xiaomi.eu rozšírenie</string>
     <string name="confirm_reset">Potvrdenie</string>
     <string name="confirm_reset_message">Obnoviť predvolené rozloženie?</string>
     <string name="contributors">MIUIos.cz</string>
@@ -17,4 +17,6 @@
     <string name="reset">Obnoviť</string>
     <string name="select_app">Vyberte aplikáciu</string>
     <string name="select_apps">Vyberte aplikácie</string>
+	<string name="auto">Automatický</string>
+    <string name="wifi_region">Wi-Fi región</string>	
 </resources>
