--- a/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
@@ -331,5 +331,5 @@
      <string name="waterdrop_preview">Kvapky</string>
      <string name="windchime">Zvonkohra</string>
      <string name="fireflies">Svetlušky</string>
-                    
+<string name="presentation_unknown">Neznáme číslo</string>                    
 </resources>
