--- a/Slovak/main/Contacts.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Contacts.apk/res/values-sk/strings.xml
@@ -1484,5 +1484,40 @@ Klepnite na \"%1$s\" a potom vyberte \"%2$s\"."</string>
      <string name="new_saf_permission_dialog_grant_permission_immediately">Ďalej</string>
      <string name="new_saf_permission_dialog_title">Vyžadujú sa povolenia</string>   
 <string name="this_folder">Použiť tento priečinok</string>        
-<string name="call_record_auto_unknown_number">Neznáme číslo</string>  
+<string name="call_record_auto_unknown_number">Neznáme číslo</string> 
+    
+<string name="call_record_add_numbers">Pridať telefónne čísla</string>
+     <string name="call_record_auto_always">Všetky hovory</string>
+     <string name="call_record_auto_scenario_title">Nahrané hovory</string>
+     <string name="call_record_auto_summary">Automaticky nahrávať hovory</string>
+     <string name="call_record_auto_title">Nahrávať automaticky</string>
+     <string name="call_record_auto_whitelist">Vybrané telefónne čísla</string>
+     <string name="call_record_content_search">Hlasové vyhľadávanie hovorov</string>
+     <string name="call_record_content_search_summary">Automaticky zaznamenávať a prepisovať hovory, aby ste mohli nájsť hovory, počas ktorých boli spomenuté určité slová</string>
+     <string name="call_record_content_summary">"Aby bolo chránené vaše súkromie, budú zvukové záznamy vašich hovorov spolu s prepísaným textom zašifrované a uložené miestne vo vašom zariadení. Iné aplikácie nebudú mať k týmto položkám prístup."</string>
+     <string name="call_record_content_title">Prepis nahrávok hovorov</string>
+     <string name="call_record_content_type">Uložené nahrávky</string>
+     <string name="call_record_content_type_audio">Iba zvuk</string>
+     <string name="call_record_content_type_audio_text">Zvuk a text</string>
+     <string name="call_record_content_type_text">Iba text</string>
+     <string name="call_record_history">Nahrávky hovorov</string>
+     <string name="call_record_password">Heslo ochrany súkromia</string>
+     <string name="call_record_password_closed">Vypnuté</string>
+     <string name="call_record_password_opened">Zapnuté</string>
+     <string name="call_record_password_summary">Chraňte nahrávky hovorov pomocou ďalšieho hesla</string>
+     <string name="call_record_setting_miui">Nahrávanie hovoru</string>
+     <string name="call_record_storage_list">Nahrávky hovorov</string>
+     <string name="call_record_text_auto_delete">Automatické mazanie nahrávok hovorov</string>
+     <string name="call_record_text_auto_delete_half_year">Po %d mesiacoch</string>
+     <string name="call_record_text_auto_delete_never">Nikdy</string>
+     <string name="call_record_text_auto_delete_one_month">Po %d mesiaci</string>
+     <string name="call_record_user_notice_all_purpose">Nájdite hovory, počas ktorých boli spomenuté určité slová</string>
+     <string name="call_record_user_notice_permission_desc_microphone">Na nahrávanie hovorov</string>
+     <string name="call_record_user_notice_permission_desc_storage">Pre ukladanie nahrávok</string>
+     <string name="call_record_user_notice_title">Hlasové vyhľadávanie</string>
+     <string name="call_record_whitelist_custom">Vybrané hovory</string>
+     <string name="call_recording_notification_summary">Dostávať upozornenia po nahratí hovoru</string>
+     <string name="call_recording_notification_title">Upozorňovať na nahrané hovory</string>
+     <string name="call_recording_notification_title_error">"Hovor sa nepodarilo nahrať"</string>
+     <string name="call_recording_setting">Nahrávky hovorov</string>    
 </resources>
