--- a/Slovak/main/CleanMaster.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CleanMaster.apk/res/values-sk/strings.xml
@@ -758,7 +758,7 @@
     <string name="tips_low_storage_dialog_ok">Vyčistiť</string>
     <string name="tips_low_storage_dialog_ok_storage">Uvoľniť miesto</string>
     <string name="tips_low_storage_dialog_title">Dochádza vám voľne miesto</string>
-    <string name="tips_of_app_manage">Odinštalovať nepoužívané aplikácie a ušetrite tak miesto na úložisku</string>
+    <string name="tips_of_app_manage">Odinštalovať nepoužívané aplikácie a ušetriť tak miesto na úložisku</string>
     <string name="tips_of_auto_launch_manage">Zakázať málo používaným aplikáciám automaticky sa spustiť na pozadí</string>
     <string name="tips_of_cloud_service">Prihláste sa svojim Mi účtom pre využívanie viac služieb</string>
     <string name="tips_of_connect">Pripojte sa k internetu pre využívanie viac funkcií Optimalizácie</string>
@@ -775,7 +775,7 @@
     <string name="title_delete_clipboard">Obsah schránky</string>
     <string name="title_delete_deepclean">Vymazať</string>
     <string name="title_delete_large_file">Vymazať veľké súbory</string>
-    <string name="title_of_app_manage">Apl.</string>
+    <string name="title_of_app_manage">Aplikácie</string>
     <string name="title_of_auto_launch_manage">Autoštart</string>
     <string name="title_of_cloud_service">Cloudové služby</string>
     <string name="title_of_garbage_cloud_scan">Kontrola cloudu</string>
