--- a/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
@@ -35,7 +35,7 @@
     <string name="all_apps_no_search_results">Nič sa nenašlo</string>
     <string name="all_apps_search_app">Vyhľadať aplikácie</string>
     <string name="all_apps_search_market_message">Vyhľadať online</string>
-    <string name="all_apps_setting_classic_title">Klasický</string>
+    <string name="all_apps_setting_classic_title">Klasická</string>
     <string name="all_apps_setting_desktop_desc">Zobraziť všetky nainštalované aplikácie na ploche. Stlačte a podržte ikonu aplikácie pre zobrazenie dostupných skratiek.</string>
     <string name="all_apps_setting_desktop_title">Bežné</string>
     <string name="all_apps_setting_drawer_desc">Umiestniť všetky nainštalované aplikácie do zoznamu aplikácií ktorý zobrazíte potiahnutím nahor.</string>
