--- a/Slovak/main/wps-lite.apk/res/values-sk/strings.xml
+++ b/Slovak/main/wps-lite.apk/res/values-sk/strings.xml
@@ -103,7 +103,7 @@
     <string name="filter">Filtrovať</string>
     <string name="func_extract_sheet">Extrahovať</string>
     <string name="func_output_as_pic">Obrázok</string>
-    <string name="func_pdf_to_word">Slovo</string>
+    <string name="func_pdf_to_word">Word</string>
     <string name="func_smart_typography">Inteligentné rozloženie</string>
     <string name="func_translate_title">Preložiť celý dokument</string>
     <string name="highlight">Zvýraznenie</string>
