--- a/Slovak/main/MtpService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MtpService.apk/res/values-sk/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="accessing_notification_title">Prístup k súborom cez %1$s</string>
+    <string name="accessing_notification_title">Prístup k súborom z %1$s</string>
     <string name="app_label">MTP Host</string>
     <string name="downloads_app_label">Stiahnuté</string>
     <string name="error_busy_device">Druhé zariadenie je zaneprázdnené. Súbory nie je možné preniesť, kým nebude k dispozícii.</string>
