--- a/Slovak/main/MiuiScreenshot.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiScreenshot.apk/res/values-sk/strings.xml
@@ -123,4 +123,105 @@ dlhý screenshot"</string>
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+    
+    
+<string name="back">Späť</string>
+     <string name="base_btn_cancel">Zrušiť</string>
+     <string name="btn_cancel">Zrušiť</string>
+     <string name="btn_cancel_send">Zrušiť tento prenos</string>
+     <string name="btn_exit_send">Ukončiť</string>
+     <string name="btn_sure">OK</string>
+     <string name="can_drag">Presunutím vložíte alebo odošlete</string>
+     <string name="can_not_transfer_when_screening">"Počas prenosov sa nedá prenášať"</string>
+     <string name="chooser_fragment_mishare_title">Zdieľať s</string>
+     <string name="confirm_cancel_task_files">Zrušiť odosielanie súborov do %1$s?</string>
+     <string name="confirm_cancel_task_images">Zrušiť odosielanie obrázkov do %1$s?</string>
+     <string name="copy">Kopírovať</string>
+     <string name="cta_agree_desc">Povoľte tejto aplikácii pripojenie k internetu a udeľte povolenia uvedené vyššie.</string>
+     <string name="cta_btn_agree">Súhlasím</string>
+     <string name="cta_btn_disagree">Nesúhlasím</string>
+     <string name="cta_main_purpose">Vitajte v editore screenshotu! Túto aplikáciu môžete použiť na orezanie a úpravu snímok obrazovky.</string>
+     <string name="default_device_name">Neznáme zariadenie</string>
+
+<string name="device_offline">Druhé zariadenie je offline. Začnite odznova.</string>
+     <string name="device_status_failed">Nepodarilo sa odoslať</string>
+     <string name="device_status_sending">Odosiela sa…</string>
+     <string name="device_status_success">Odoslané úspešne</string>
+     <string name="device_status_waiting">Čaká sa…</string>
+     <string name="device_type_pc">Počítač</string>
+     <string name="enable_midrop">Zapnúť</string>
+     <string name="expand_button_title">Rozšírené</string>
+     <string name="file_cannot_print">Túto položku nie je možné vytlačiť.</string>
+     <string name="file_cannot_screen_throw">Túto položku nie je možné odoslať.</string>
+     <string name="file_sending">Odosielanie…</string>
+     <string name="filter_category_movie">Film</string>
+     <string name="functions_are_being_developed">Táto funkcia bude čoskoro k dispozícii.</string>
+     <string name="garbage_count">Existuje %1$s starých prípadov</string>
+     <string name="global_main_purpose">Vitajte v editore snímok obrazovky! Túto aplikáciu môžete použiť na orezanie a úpravu snímok obrazovky. Táto aplikácia sa musí pripojiť k internetu, aby mohla normálne fungovať.</string>
+     <string name="help">Nemôžete nájsť zariadenia?</string>
+<string name="help_content">Ak nemôžete nájsť zariadenie, ktoré potrebujete, požiadajte druhú osobu, aby zapla Mi Share.</string>
+      <string name="image_decode_failed">Nepodarilo sa dekódovať obrázok</string>
+     <string name="image_not_found">Nebolo možné nájsť obrázok</string>
+     <string name="loading_text_format" formatted="false">Odstraňujú sa súkromné ​​informácie z fotografií (%d/%d)…</string>
+     <string name="long_screenshot_intercepted_error">Nepodarilo sa vytvoriť screenshot. Skúste to znova.</string>
+     <string name="long_screenshot_processing_description_accessibility">Spracováva sa</string>
+     <string name="long_screenshot_top_msg_description_accessibility">Vytvára sa screenshot</string>
+     <string name="main_save_error_msg">Nepodarilo sa uložiť zmeny kvôli chybe</string>
+     <string name="nearby_share">Zdieľanie nablízku</string>
+     <string name="not_set">Nenastavené</string>
+     <string name="notification_channel_alerts">Upozornenia</string>
+     <string name="pc_device_model_name">Počítač</string>
+     <string name="photo_editor_beauty_compare">Pôvodné</string>
+     <string name="photo_editor_doodle">Doodle</string>
+     <string name="photo_editor_label">Upraviť</string>
+     <string name="photo_editor_long_crop">Orezať</string>
+     <string name="photo_editor_mosaic">Mozaika</string>
+     <string name="photo_editor_saving">Ukladá sa…</string>
+     <string name="photo_editor_text">Text</string>
+<string name="photo_font_download_failed_for_notwork">Nepodarilo sa stiahnuť. Pripojte sa k sieti a skúste to znova.</string>
+     <string name="photo_save_to_msg">Uložené do %s</string>
+     <string name="preference_copied">\"%1$s\" bolo skopírované do schránky.</string>
+      <string name="remover_menu_processing">Spracováva sa</string>
+     <string name="save_success">Úspešne uložené</string>
+     <string name="scanning_device_tips">Vyhľadávajú sa zariadenia v okolí... Uistite sa, že druhé zariadenie je v režime viditeľnosti.</string>
+     <string name="screen_editor_btn_delete">Odstrániť</string>
+     <string name="screen_editor_btn_save">Uložiť</string>
+     <string name="screen_editor_btn_shell_off">Odstrániť rám zariadenia</string>
+     <string name="screen_editor_btn_shell_on">Pridať rám zariadenia</string>
+     <string name="screen_editor_delete_dialog_msg">Chcete odstrániť tento screenshot?</string>
+     <string name="screen_editor_delete_dialog_picture_msg">Chcete teraz odstrániť tento obrázok?</string>
+     <string name="screen_editor_finish">Hotovo</string>
+     <string name="screen_editor_shell_disallowed_with_crop">Nie je možné pridať rám zariadenia k orezaným snímkam obrazovky</string>
+     <string name="screen_editor_shell_net_error">Pripojte sa k sieti a stiahnite si rámec zariadenia</string>
+     <string name="screen_editor_shell_res_downloading">Preberá sa rám zariadenia…</string>
+     <string name="screen_save_dialog_btn_cancel">Zrušiť</string>
+     <string name="screen_save_dialog_btn_delete">Odstrániť screenshot</string>
+     <string name="screen_save_dialog_btn_save">Uložiť do galérie</string>
+     <string name="screenshot_save">Uložiť</string>
+     <string name="send_files_by">Zdieľať súbory cez</string>
+     <string name="send_files_to">Odoslať položky na</string>
+<string name="share_and_delete_picture">Po zdieľaní odstrániť</string>
+     <string name="share_and_delete_screenshot">Odstrániť po zdieľaní</string>
+      <string name="text_append_hint">Zadajte text</string>
+     <string name="text_edit_dialog_font">Písmo</string>
+     <string name="text_edit_dialog_keyboard">Klávesnica</string>
+     <string name="text_edit_dialog_style">Štýl</string>
+     <string name="text_edit_dialog_style_align_center">Zarovnanie na stred</string>
+     <string name="text_edit_dialog_style_align_left">Zarovnanie doľava</string>
+     <string name="text_edit_dialog_style_align_right">Zarovnanie doprava</string>
+     <string name="text_edit_dialog_style_bold">Tučné</string>
+     <string name="text_edit_dialog_style_color">"Farba "</string>
+     <string name="text_edit_dialog_style_shadow">Tieň</string>
+     <string name="text_edit_dialog_style_stroke">Obrys</string>
+     <string name="text_edit_dialog_style_toast">Nie je možné umiestniť obrysový text na pozadia</string>
+     <string name="text_edit_dialog_style_transparent">Nepriehľadnosť</string>
+     <string name="throwing_print">Tlačiť</string>
+     <string name="throwing_screen">Prenášanie</string>
+     <string name="tips_prompt_enable_midrop">Mi Share</string>
+     <string name="toast_download_with_metered_network_btn_continue">Stiahnuť</string>
+     <string name="toast_download_with_metered_network_msg">Zdá sa, že vaše zariadenie nie je pripojené k Wi-Fi. Stiahnuť položky pomocou mobilných dát?</string>
+     <string name="toast_download_with_metered_network_title">Upozornenie na používanie dát</string>
+     <string name="unrecognized_manufacture">Neznáme</string>
+     <string name="unrecognized_model">Neznáme zariadenie</string>
+
 </resources>
